# Profit-AI

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README_RUN.md  alembic.ini  create_test_pdf.py  data.db  migrate_db.py  pyproject.toml  requirements.txt  test_ai_connection.py  test_socket.py
backend/migrations/versions/: d24f93f3beaa_sync_schemas.py  d322ae002351_sync_schemas.py
backend/scripts/: set_admin.py
backend/src/: config.py  database.py  main.py  socket_manager.py
backend/src/models/: agent.py  base.py  billing.py  chat.py  company.py  user.py
backend/src/modules/admin/: deps.py  router.py  schemas.py  service.py
backend/src/modules/agent/: router.py  schemas.py  service.py
backend/src/modules/ai_engine/: models.py  prompts.py  router.py  service.py
backend/src/modules/auth/: __init__.py  deps.py  router.py  schemas.py  service.py
backend/src/modules/billing/: router.py  schemas.py  service.py
backend/src/modules/builder/: models.py  router.py  schemas.py  service.py
backend/src/modules/chat/: __init__.py  router.py  schemas.py  service.py
backend/src/modules/integrations/telegram/: __init__.py  router.py  service.py
backend/src/modules/integrations/vk/: router.py  schemas.py  service.py
backend/src/modules/onboarding/: router.py  schemas.py  service.py
backend/src/modules/users/: router.py  schemas.py  service.py
backend/static/: test-widget.html  widget.js
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: index.tsx
frontend/src/app/: App.tsx
(+30 files in other folders)
