[tool.poetry]
name = "profit-flow-backend"
version = "0.1.0"
description = "Backend for Profit Flow Business Platform"
authors = ["Profit Flow Team <team@profitflow.ai>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
redis = "^5.0.1"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.9"
httpx = "^0.27.0"
# AI & Utils
openai = "^1.12.0"
python-dotenv = "^1.0.1"
email-validator = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
